// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class components properly pass through dynamic props 1`] = `
<Component
  items={
    Array [
      true,
      true,
      false,
    ]
  }
>
  <ClassComp
    forceUpdate={[Function]}
    truthyCount={2}
  >
    You have 
    2
     items available
  </ClassComp>
</Component>
`;

exports[`functional components properly pass through dynamic props 1`] = `
<Component
  items={
    Array [
      true,
      true,
      false,
    ]
  }
>
  <FuncComp
    forceUpdate={[Function]}
    truthyCount={2}
  >
    You have 
    2
     items available
  </FuncComp>
</Component>
`;
